deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unchessful
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: unchessful
  name: unchessful-api
  labels:
    app: unchessful-api

spec:
  replicas: 2
  selector:
    matchLabels:
      app: unchessful-api
  template:
    metadata:
      labels:
        app: unchessful-api
    spec:
      topologySpreadConstraints:
      - whenUnsatisfiable: DoNotSchedule
        topologyKey: kubernetes.io/hostname
        labelSelector:
          matchLabels:
            app: unchessful-api
        maxSkew: 1
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - k8s-adam
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: server
          image: registry.danya02.ru/unchessful/api:v1
          imagePullPolicy: Always
          resources:
            requests:
              memory: 512M
              cpu: 350m
            limits:
              memory: 2048M
              cpu: 1500m
          ports:
            - name: web
              containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  namespace: unchessful
  name: unchessful-api-svc

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: unchessful-api

---

# Traefik-specific ingress, can configure custom Traefik props
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unchessful-api-ingressroute
  namespace: unchessful
spec:
  tls:
    domains:
      - main: api.unchessful.games
  entryPoints:
    - websecure
  routes:
  - match: Host(`api.unchessful.games`)
    kind: Rule
    services:
      - name: unchessful-api-svc
        port: web
